@@ -54,4 +54,9 @@ m4_include([dbmdel00.at])
 m4_include([dbmdel01.at])
 m4_include([dbmdel02.at])
 
+AT_BANNER([DB options])
+
+m4_include([setopt00.at])
+m4_include([setopt01.at])
+
 # End of testsuite.at
